fixed colors for light mode and dark mode  and added tabs

--- a/src/App.css
+++ b/src/App.css
@@ -30,13 +30,13 @@
 }
 
 :root {
-  --breakpoint-md: 1090px;
   --background: 0 0% 95%;
 
   --foreground: 222.2 84% 4.9%;
 
-  --card: 222.2 60% 9%;
-  --card-foreground: 222.2 84% 4.9%;
+  --card: 200 20% 85%;
+
+  --card-foreground: 200 20% 70%;
 
   --popover: 0 0% 100%;
   --popover-foreground: 222.2 84% 4.9%;
@@ -47,7 +47,7 @@
   --secondary: 180 100% 27%;
   --secondary-foreground: 222.2 47.4% 11.2%;
 
-  --muted: 210 40% 40%;
+  --muted: 210 10% 20%;
   --muted-foreground: 215.4 16.3% 46.9%;
 
   --accent: 210 40% 96.1%;
